Fixing the urls

--- a/HT0002/index.html
+++ b/HT0002/index.html
@@ -7,9 +7,9 @@
   <title>HT0002</title>
   
   
-  <script src="../_lib/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-  <script src="../_lib/md.js" type="text/javascript" charset="utf-8"></script>
-  <script src="../_lib/index.js" type="text/javascript" charset="utf-8"></script>
+  <script src="../lib/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="../lib/md.js" type="text/javascript" charset="utf-8"></script>
+  <script src="../lib/index.js" type="text/javascript" charset="utf-8"></script>
   
   
   <script src="../HT0001/gestures.js" type="text/javascript" charset="utf-8"></script>
