--- a/HT0001/index.html
+++ b/HT0001/index.html
@@ -7,9 +7,9 @@
   <title>HT0001</title>
   
   
-  <script src="../_lib/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-  <script src="../_lib/md.js" type="text/javascript" charset="utf-8"></script>
-  <script src="../_lib/index.js" type="text/javascript" charset="utf-8"></script>
+  <script src="../lib/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="../lib/md.js" type="text/javascript" charset="utf-8"></script>
+  <script src="../lib/index.js" type="text/javascript" charset="utf-8"></script>
   
   
   <script src="gestures.js" type="text/javascript" charset="utf-8"></script>
