Added some more domains

--- a/HT0003/index.html
+++ b/HT0003/index.html
@@ -14,13 +14,28 @@ h2 em {
 }
 
 div#invalid {
+  font-size: 12px;
   border-left: 10px solid red;
   padding-left: 10px;
+}
+
+div#invalid h2 {
+  font-size: 14px;
 }
 
 div#valid {
   border-left: 10px solid green;
   padding-left: 10px;
+  font-size: 12px;
+}
+div#valid h2 {
+  font-size: 12px;
+}
+
+div#valid .row {
+  height: 2em;
+  overflow: hidden;
+  margin-bottom: .5em;
 }
 
 div.row {
@@ -69,6 +84,139 @@ var zones =
     { 'CNAME': ['huishappaert.com']
     }
   }
+  
+, 'delvaux-eshop.com.':
+  { 'delvaux-eshop.com.':
+    { 'A':
+      [ '188.93.97.101'
+      ]
+    }
+  , 'www':
+    { 'CNAME': ['delvaux-eshop.com']
+    }
+  }
+  
+, 'delvaux.asia.':
+  { 'delvaux.asia.':
+    { 'A':
+      [ '188.93.97.101'
+      ]
+    }
+  , 'www':
+    { 'CNAME': ['delvaux.asia']
+    }
+  }
+  
+, 'delvaux.asia.com.':
+  { 'delvaux.asia.com.':
+    { 'A':
+      [ '188.93.97.101'
+      ]
+    }
+  , 'www':
+    { 'CNAME': ['delvaux.asia.com']
+    }
+  }
+  
+, 'delvaux.be.':
+  { 'delvaux.be.':
+    { 'A':
+      [ '188.93.97.101'
+      ]
+    }
+  , 'www':
+    { 'CNAME': ['delvaux.be']
+    }
+  }
+  
+, 'delvaux.com.':
+  { 'delvaux.com.':
+    { 'A':
+      [ '188.93.97.101'
+      ]
+    }
+  , 'www':
+    { 'CNAME': ['delvaux.com']
+    }
+  }
+  
+, 'delvaux.eu.':
+  { 'delvaux.eu.':
+    { 'A':
+      [ '188.93.97.101'
+      ]
+    }
+  , 'www':
+    { 'CNAME': ['delvaux.eu']
+    }
+  }
+  
+, 'delvaux.fr.':
+  { 'delvaux.fr.':
+    { 'A':
+      [ '188.93.97.101'
+      ]
+    }
+  , 'www':
+    { 'CNAME': ['delvaux.fr']
+    }
+  }
+  
+, 'studiodelvaux.com.':
+  { 'studiodelvaux.com.':
+    { 'A':
+      [ '188.93.97.101'
+      ]
+    }
+  , 'www':
+    { 'CNAME': ['studiodelvaux.com']
+    }
+  }
+  
+, 'studiodelvaux.de.':
+  { 'studiodelvaux.de.':
+    { 'A':
+      [ '188.93.97.101'
+      ]
+    }
+  , 'www':
+    { 'CNAME': ['studiodelvaux.de']
+    }
+  }
+  
+, 'studiodelvaux.lu.':
+  { 'studiodelvaux.lu.':
+    { 'A':
+      [ '188.93.97.101'
+      ]
+    }
+  , 'www':
+    { 'CNAME': ['studiodelvaux.lu']
+    }
+  }
+  
+, 'studiodelvaux.nl.':
+  { 'studiodelvaux.nl.':
+    { 'A':
+      [ '188.93.97.101'
+      ]
+    }
+  , 'www':
+    { 'CNAME': ['studiodelvaux.nl']
+    }
+  }
+  
+, 'studiodelvaux.ru.':
+  { 'studiodelvaux.ru.':
+    { 'A':
+      [ '188.93.97.101'
+      ]
+    }
+  , 'www':
+    { 'CNAME': ['studiodelvaux.ru']
+    }
+  }
+  
 , 'mrhenry.be.':
   { 'mrhenry.be.':
     { 'A':
