Added more domains

--- a/HT0003/index.html
+++ b/HT0003/index.html
@@ -227,6 +227,172 @@ var zones =
     { 'CNAME': ['mrhenry.be']
     }
   }
+  
+, 'combiband.eu.':
+  { 'combiband.eu.':
+    { 'A':
+      [ '87.236.178.45'
+      ]
+    }
+  , 'www':
+    { 'CNAME': ['combiband.eu']
+    }
+  }
+  
+, 'orakel.be.':
+  { 'orakel.be.':
+    { 'A':
+      [ '87.236.178.45'
+      ]
+    }
+  , 'www':
+    { 'CNAME': ['orakel.be']
+    }
+  }
+  
+, 'orakel.co.uk.':
+  { 'orakel.co.uk.':
+    { 'A':
+      [ '87.236.178.45'
+      ]
+    }
+  , 'www':
+    { 'CNAME': ['orakel.co.uk']
+    }
+  }
+  
+, 'orakel.com.':
+  { 'orakel.com.':
+    { 'A':
+      [ '87.236.178.45'
+      ]
+    }
+  , 'www':
+    { 'CNAME': ['orakel.com']
+    }
+  }
+  
+, 'orakel.es.':
+  { 'orakel.es.':
+    { 'A':
+      [ '87.236.178.45'
+      ]
+    }
+  , 'www':
+    { 'CNAME': ['orakel.es']
+    }
+  }
+  
+, 'orakel.fr.':
+  { 'orakel.fr.':
+    { 'A':
+      [ '87.236.178.45'
+      ]
+    }
+  , 'www':
+    { 'CNAME': ['orakel.fr']
+    }
+  }
+  
+, 'orakel.gr.':
+  { 'orakel.gr.':
+    { 'A':
+      [ '87.236.178.45'
+      ]
+    }
+  , 'www':
+    { 'CNAME': ['orakel.gr']
+    }
+  }
+  
+, 'orakel.pl.':
+  { 'orakel.pl.':
+    { 'A':
+      [ '87.236.178.45'
+      ]
+    }
+  , 'www':
+    { 'CNAME': ['orakel.pl']
+    }
+  }
+  
+, 'orakel.ru.':
+  { 'orakel.ru.':
+    { 'A':
+      [ '87.236.178.45'
+      ]
+    }
+  , 'www':
+    { 'CNAME': ['orakel.ru']
+    }
+  }
+  
+, 'orakelproducts.be.':
+  { 'orakelproducts.be.':
+    { 'A':
+      [ '87.236.178.45'
+      ]
+    }
+  , 'www':
+    { 'CNAME': ['orakelproducts.be']
+    }
+  }
+  
+, 'rotaryshop.eu.':
+  { 'rotaryshop.eu.':
+    { 'A':
+      [ '87.236.178.45'
+      ]
+    }
+  , 'www':
+    { 'CNAME': ['rotaryshop.eu']
+    }
+  }
+  
+, 'teknoprint.be.':
+  { 'teknoprint.be.':
+    { 'A':
+      [ '87.236.178.45'
+      ]
+    }
+  , 'www':
+    { 'A': ['87.236.178.45']
+    }
+  }
+  
+, 'teknoprint.de.':
+  { 'teknoprint.de.':
+    { 'A':
+      [ '87.236.178.45'
+      ]
+    }
+  , 'www':
+    { 'A': ['87.236.178.45']
+    }
+  }
+  
+, 'teknoprint.eu.':
+  { 'teknoprint.eu.':
+    { 'A':
+      [ '87.236.178.45'
+      ]
+    }
+  , 'www':
+    { 'A': ['87.236.178.45']
+    }
+  }
+  
+, 'teknoprint.nl.':
+  { 'teknoprint.nl.':
+    { 'A':
+      [ '87.236.178.45'
+      ]
+    }
+  , 'www':
+    { 'A': ['87.236.178.45']
+    }
+  }
+  
 , 'flanders-classics.mrhenry.be.':
   { 'bp-staging':             { 'A': ['188.93.97.30'] }
   , 'bp':                     { 'A': ['188.93.97.30'] }
