Image path update

--- a/HT0004/index.html
+++ b/HT0004/index.html
@@ -19,7 +19,7 @@
   </div>
   
   <div id="images_for_canvas">
-    <img src="images/assets/lion-tumblr_kpu3g8hhiD1qzx4jno1_500.png" id="cnvs_1">
+    <img src="images/assets/test.jpg" id="cnvs_1">
   </div>
   
   <script src="javascripts/libs/jquery-1.6.1.min.js"></script>
